// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component - TasksSubList renders correctly Done section 1`] = `
Array [
  <ListSubheader>
    <strong>
      Done
       (
      1
      )
    </strong>
  </ListSubheader>,
  <TaskCheckbox
    id="1"
    status="UNCOMPLETED"
    title="Call you head manager"
  />,
]
`;

exports[`Component - TasksSubList renders correctly Todo section 1`] = `
Array [
  <ListSubheader>
    <strong>
      Todo
       (
      1
      )
    </strong>
  </ListSubheader>,
  <TaskCheckbox
    id="2"
    status="COMPLETED"
    title="Write you main manager"
  />,
]
`;

exports[`Component - TasksSubList renders correctly without tasks and count 1`] = `
<ListSubheader>
  <strong>
    Todo
     (
    )
  </strong>
</ListSubheader>
`;
